# bridgestate-ocw

./: Article.md  Cargo.toml  README.md  cargo.toml
pallets/collateral-reader/: Cargo.toml  README.md
pallets/collateral-reader/src/: helper.rs  impls.rs  interlay.rs  lib.rs  mock.rs  multichain.rs  tests.rs
runtime/src/: lib.rs
src/: helper.rs  impls.rs  interlay.rs  keys.rs  lib.rs  mock.rs  multichain.rs  storage.rs  tests.rs
