[package]
name = "pallet-collateral-reader"
version = "0.1.0"
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

frame-metadata = { version = "15.1", default-features = false, features = ["v14", "serde_full", "decode"] }
sp-std = { version = "8.0.0", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

sp-io = { version = "23.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keystore = { version = "0.27.0", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
# inderect dep
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
hex = "0.4.0"


[features]
default = ["std"]


std = [
  "serde/std",
  "serde_json/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "sp-io/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-keystore",
]